--- a/index.html
+++ b/index.html
@@ -101,13 +101,14 @@
 <body>
     <div>
         <div class="box">
-            <img src="/image-omelette.jpeg" alt="">
+            <img src="/image-omelette.jpeg" alt="Header Image">
             <h1>Simple Omlette Receipe</h1>
             
             <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
             <div class="prepbox">
+                <h3 style="color:rgb(165, 115, 115) ;"><strong>Preparation Time</strong></h3>
                 <ul>
-                    <h3 style="color:rgb(165, 115, 115) ;"><strong>Preparation Time</strong></h3>
+                    
                     <li><strong>Total:</strong> Aprroximately 10 minutes</li>
                     <li><strong>Preparation:</strong> 5 minutes</li>
                     <li><strong>Cooking:</strong> 5 minutes</li>
